# OpenCV_pro

./: .gitignore
KeyPointTraker_opencv/: .gitignore  README.md  detectorvideo.cpp  detectorvideo.h  image.cpp  image.h  main.cpp  videoprocessor.cpp  videoprocessor.h
ORB_test/: ORB_Detector.pro  README.md  Video.cpp  Video.h  helper.cpp  helper.h  main.cpp  orb_detector.cpp  orb_detector.h
ObjectDetectorOpenCV/: .gitignore  README.md  categorize.cpp  categorize.h  compile_all.sh  define.h  main.cpp
OpenCV_MotionDetector/: .gitignore  README.md
OpenCV_MotionDetector/include/: app.h
OpenCV_MotionDetector/src/: app.cpp  main.cpp
OpenCvCamera/: .gitignore  camera.cpp  camera.h  helper.h  main.cpp
SketchPhotoTaker/: README.MD  image.cpp  image.h  main.cpp  sketchplayer.cpp  sketchplayer.h  videoplayer.cpp  videoplayer.h
border_colorer/include/: image_borderer.h  util.h
border_colorer/src/: image_borderer.cpp  main.cpp  util.cpp
cascade_programs/: README.md
cascade_programs/include/: detector.h  helper.h  pedestrian_detector.h  video_player.h
cascade_programs/src/: detector.cpp  helper.cpp  main.cpp  pedestrian_detector.cpp  video_player.cpp
pixel_extractor/include/: extractor.h
pixel_extractor/src/: extractor.cpp  main.cpp
test_image_threshold/: CMakeLists.txt
test_image_threshold/include/: threshold_image.h
test_image_threshold/src/: main.cpp  threshold_image.cpp
threshold_image/include/: image.h  threshold_image.h
threshold_image/src/: image.cpp  main.cpp  threshold_image.cpp
